# data-migration

./: Cargo.toml  Cross.toml  Dockerfile
.github/: deploy.yml
.github/workflows/: deploy.yml
src/: arguments.rs  database.rs  database_order_executions.rs  database_orders.rs  database_solver_competition.rs  lib.rs  main.rs  run.rs  solver_competition_api.rs
