[package]
name = "data-migration"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data-migration"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.76"
bigdecimal = "0.3"
clap = { version = "4.5.6", features = ["derive", "env"] }
derivative = "2.2.0"
derive_more = "0.99.17"
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.4.1"
num = "0.4.3"
primitive-types = "0.12"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "tls-native-tls", "bigdecimal", "chrono", "postgres", "macros"] }
time = { version = "0.3.36", features = ["macros"] }
toml = "0.8.14"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
url = "2.5.0"
web3 = { version = "0.19.0", default-features = false }
